# opendmi

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  CONVENTIONS.adoc  CONVENTIONS.md  COVERAGE.md  LICENSE-3RD-PARTY.md  LICENSE.md  README.md  ROADMAP.md  SECURITY.md  build.conf.dist  build.sh  coverage.sh  libopendmi.profdata  regress.py
libdmi/: CMakeLists.txt
libdmi/include/opendmi/: attribute.h  backend.h  baseboard.h  cache.h  chassis.h  context.h  defs.h  device.h  dmi.h  entry.h  error.h  extension.h  firmware.h  log.h  memory.h  name.h  probe.h  processor.h  registry.h  system.h  table.h  types.h  utils.h  version.h
libdmi/man/: dmi_close.adoc  dmi_create.adoc  dmi_dump_load.adoc  dmi_dump_save.adoc  dmi_open.adoc
libdmi/src/: attribute.c  baseboard.c  cache.c  chassis.c  config.h.in  context.c  entry.c  error.c  log.c  name.c  probe.c  processor.c  registry.c  table.c  types.c  utils.c
libdmi/src/backend/: darwin.c  dump.c  freebsd.c  linux.c  windows.c
libdmi/src/extension/: apple.c  dell.c  intel.c
libdmi/src/table/: additional-info.c  baseboard.c  battery.c  bis-entry-point.c  cache.c  chassis.c  common.c  cooler.c  cooling-device.c  current-probe.c  firmware-inventory.c  firmware-language.c  firmware.c  group-assoc.c  hardware-security.c  ipmi-device.c  memory-array-addr.c  memory-array.c  memory-channel.c  memory-controller.c  memory-device-addr.c  memory-device.c  memory-error-32.c  memory-error-64.c  memory-error.c  memory-module.c  memory.c  mgmt-controller.c  mgmt-device.c  oem-strings.c  onboard-device.c  oob-remote-access.c  pointing-device.c  port-connector.c  port.c  power-controls.c  power-supply.c  probe.c  processor.c  slot.c  (+10 more)
libdmi/test/: battery-chemistry-name.c  bswap32.c  cache-assoc-name.c  cache-mode-name.c  cache-size-ex.c  chassis-type-name.c  decode-qword.c  ecc-type-name.c  ipow.c  memory-device-size-ex.c
libopendmi/: CMakeLists.txt
libopendmi-python/: CMakeLists.txt
libopendmi-python/src/: context.c  module.c
libopendmi/include/opendmi/: attribute.h  backend.h  context.h  date.h  defs.h  endian.h  entity.h  entry.h  error.h  extension.h  filter.h  keyword.h  log.h  module.h  name.h  registry.h  stream.h  table.h  types.h  utils.h  value.h  vendor.h  version.h
libopendmi/locale/en_US/: en_US.txt
libopendmi/locale/ru_RU/: ru_RU.txt
libopendmi/man/: dmi_bswap.3.adoc  dmi_bswap.adoc  dmi_bswap16.adoc  dmi_cooling_device.3.adoc  dmi_create.adoc  dmi_dump_load.3.adoc  dmi_dump_save.3.adoc  dmi_memory_array_addr.3.adoc  dmi_open.adoc  dmi_pointing_device.adoc
libopendmi/man/man3/: dmi_base64_decode.3.adoc  dmi_base64_encode.3.adoc  dmi_bswap.3.adoc  dmi_bswap16.3.adoc  dmi_close.3.adoc  dmi_cooling_device.3.adoc  dmi_create.3.adoc  dmi_dump_load.3.adoc  dmi_dump_save.3.adoc  dmi_entity_create.3.adoc  dmi_entity_data.3.adoc  dmi_entity_decode.3.adoc  dmi_entity_destroy.3.adoc  dmi_entity_handle.3.adoc  dmi_entity_info.3.adoc  dmi_entity_link.3.adoc  dmi_entity_name.3.adoc  dmi_entity_string.3.adoc  dmi_entity_string_ex.3.adoc  dmi_entity_type.3.adoc  dmi_error_clear.3.adoc  dmi_error_get_first.3.adoc  dmi_error_get_last.3.adoc  dmi_error_message.3.adoc  dmi_error_peek_first.3.adoc  dmi_error_peek_last.3.adoc  dmi_error_raise.3.adoc  dmi_error_raise_ex.3.adoc  dmi_file_close.3.adoc  dmi_file_lock.3.adoc  dmi_file_read.3.adoc  dmi_file_seek.3.adoc  dmi_file_stat.3.adoc  dmi_file_tell.3.adoc  dmi_file_unlock.3.adoc  dmi_file_write.3.adoc  dmi_memory_array_addr.3.adoc  dmi_open.3.adoc  dmi_pointing_device.3.adoc  dmi_stream_decode.3.adoc  (+19 more)
libopendmi/src/: attribute.c  backend.c  config.h.in  context.c  date.c  endian.c  entity.c  entry.c  error.c  filter.c  log.c  module.c  name.c  registry.c  stream.c  table.c  utils.c  vendor.c  version.c
libopendmi/src/backend/: darwin.c  dump.c  freebsd.c  generic.c  linux.c  netbsd.c  windows.c
libopendmi/src/entity/: additional-info.c  baseboard.c  battery.c  bis-entry-point.c  cache.c  chassis.c  common.c  cooling-device.c  current-probe.c  firmware-inventory.c  firmware-language.c  firmware.c  group-assoc.c  hardware-security.c  ipmi-device.c  memory-array-addr.c  memory-array.c  memory-channel.c  memory-controller.c  memory-device-addr.c  memory-device.c  memory-error-32.c  memory-error-64.c  memory-error.c  memory-module.c  mgmt-controller.c  mgmt-device-component.c  mgmt-device-threshold.c  mgmt-device.c  oem-strings.c  onboard-device-ex.c  onboard-device.c  oob-remote-access.c  pointing-device.c  port-connector.c  power-controls.c  power-supply.c  probe.c  processor-ex.c  processor.c  (+10 more)
libopendmi/src/extension/: acer.c  ami.c  apple.c  dell.c  hp.c  hpe.c  ibm.c  intel.c  lenovo.c  sun.c
libopendmi/src/module/: acer.c  ami.c  apple.c  dell.c  hp.c  hpe.c  ibm.c  intel.c  lenovo.c  sun.c
libopendmi/src/table/: additional-info.c  baseboard.c  battery.c  bis-entry-point.c  cache.c  chassis.c  common.c  cooling-device.c  current-probe.c  firmware-inventory.c  firmware-language.c  firmware.c  group-assoc.c  hardware-security.c  ipmi-device.c  (+34 more)
libopendmi/test/: attribute-format-address.c  attribute-format-bool.c  attribute-format-decimal.c  attribute-format-enum.c  attribute-format-handle.c  attribute-format-integer.c  attribute-format-set.c  attribute-format-size.c  attribute-format-string.c  attribute-format-uuid.c  attribute-format-version.c  attribute.c  baseboard-type-name.c  battery-chemistry-name.c  bcd-decode.c  bswap16.c  bswap32.c  bswap64.c  cache-assoc-name.c  cache-location-name.c  cache-mode-name.c  cache-size-ex.c  cache-size.c  cache-type-name.c  chassis-security-status-name.c  chassis-state-name.c  chassis-type-name.c  date-parse.c  decode-bcd.c  decode-dword.c  decode-qword.c  decode-uuid.c  decode-word.c  dword-decode.c  encode-uuid.c  error-correct-type-name.c  error.c  hton16.c  hton32.c  hton64.c  (+25 more)
opendmi/: CMakeLists.txt
opendmi-dbus/: CMakeLists.txt
opendmi-dbus/src/: config.h  config.h.in  main.c  pidfile.c
opendmi/src/: argument.c  command.c  config.h.in  format.c  main.c  option.c  pager.c  tty.c
(+555 files in other folders)
