#
# OpenDMI: Cross-platform DMI/SMBIOS framework
# Copyright (c) 2025-2026, The OpenDMI contributors
#
# SPDX-License-Identifier: BSD-3-Clause
#
cmake_minimum_required(VERSION 3.25)

project(opendmi
        VERSION 0.2.0
        DESCRIPTION "Cross-platform DMI/SMBIOS framework"
        HOMEPAGE_URL https://github.com/sdnvx/opendmi
        LANGUAGES C)

set(OPENDMI_VERSION "${CMAKE_PROJECT_VERSION}")

set(OPENDMI_VERSION_MAJOR "${CMAKE_PROJECT_VERSION_MAJOR}")
set(OPENDMI_VERSION_MINOR "${CMAKE_PROJECT_VERSION_MINOR}")
set(OPENDMI_VERSION_PATCH "${CMAKE_PROJECT_VERSION_PATCH}")

set(ENABLE_GOLANG OFF CACHE BOOL "Enable Go support (libopendmi-go)")
set(ENABLE_PYTHON OFF CACHE BOOL "Enable Python support (libopendmi-python)")
set(ENABLE_RUST OFF CACHE BOOL "Enable Rust support (libopendmi-rust)")
set(ENABLE_DBUS OFF CACHE BOOL "Enable D-bus support (opendmi-dbus)")

set(ENABLE_ICU OFF CACHE BOOL "Build ICU4C support")
set(ENABLE_CURSES ON CACHE BOOL "Build with Curses support")
set(ENABLE_JSON ON CACHE BOOL "Build with JSON support")
set(ENABLE_XML ON CACHE BOOL "Build with XML support (libxml)")
set(ENABLE_YAML ON CACHE BOOL "Build with YAML support (libyaml)")

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")

set(CMAKE_C_STANDARD 23)
set(CMAKE_C_EXTENSIONS ON)

set(CMAKE_COMPILE_WARNING_AS_ERROR ON)

if(MSVC)
    add_compile_options(/std:c11 /W4)
    add_compile_definitions(_CRT_NONSTDC_NO_DEPRECATE)
else()
    add_compile_options(-Wall -Wextra)

    if("${CMAKE_C_COMPILER_ID}" STREQUAL "Clang" OR
       "${CMAKE_C_COMPILER_ID}" STREQUAL "AppleClang")
        add_compile_options(-Wno-gnu-zero-variadic-macro-arguments -Wno-keyword-macro)
    endif()
endif()

if(UNIX)
    add_compile_definitions(_XOPEN_SOURCE _GNU_SOURCE)
endif()

if("${CMAKE_BUILD_TYPE}" STREQUAL "")
    set(CMAKE_BUILD_TYPE Debug)
endif()

if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
    add_compile_options(-g -fno-omit-frame-pointer)
else()
    add_compile_options(-O2)
    add_compile_definitions(NDEBUG)
endif()

find_program(CPPCHECK_EXECUTABLE NAMES cppcheck)

include(FindPackageEx)

if(APPLE)
    list(PREPEND CMAKE_PREFIX_PATH "/opt/homebrew/opt/icu4c")
    LIST(PREPEND CMAKE_PROGRAM_PATH "/opt/homebrew/opt/icu4c/bin/")
endif()

find_package(AsciiDoctor)
find_package(AsciiDoctorPdf)

find_package_ex(ICU ENABLE_ICU COMPONENTS data uc)
find_package_ex(Curses ENABLE_CURSES)
find_package_ex(LibXml2 ENABLE_XML)
find_package_ex(LibYaml ENABLE_YAML)

include(CheckIncludeFile)

check_include_file(sys/mman.h HAVE_SYS_MMAN_H)
check_include_file(unistd.h HAVE_UNISTD_H)
check_include_file(share.h HAVE_SHARE_H)
check_include_file(io.h HAVE_IO_H)

enable_testing()

add_subdirectory(libopendmi)
add_subdirectory(opendmi)
add_subdirectory(reference)

if(ENABLE_GOLANG)
    message(STATUS "GoLang support is enabled")
    add_subdirectory(libopendmi-go)
else()
    message(STATUS "GoLang suport is disabled")
endif()

if(ENABLE_PYTHON)
    message(STATUS "Python support is enabled")
    add_subdirectory(libopendmi-python)
else()
    message(STATUS "Python support is disabled")
endif()

if(ENABLE_RUST)
    message(STATUS "Rust support is enabled")
    add_subdirectory(libopendmi-rust)
else()
    message(STATUS "Rust support is disabled")
endif()

if(UNIX AND ENABLE_DBUS)
    message(STATUS "DBus support is enabled")
    add_subdirectory(opendmi-dbus)
else()
    message(STATUS "DBus support is disabled")
endif()

include(CPack)
include(GNUInstallDirs)
